tariff duplicate rows and project load data
- Don't allow tariff saving or TOU analysis when there is duplicate row names
- Try and use load data for projects loaded from memory

--- a/templates/index.html
+++ b/templates/index.html
@@ -1130,14 +1130,16 @@
                             <h4 style="margin-bottom: 0;">Summary</h4>
                             <hr style="width: 90%; float: left; margin-bottom: 1.5vh;">
                         </div>
-                        <div class="row" style="overflow: hidden;">
+                        <div class="row" style="overflow: hidden; height: 70%;">
                             <div class="col" style="width: 30%">
                                 <div class="label_stacked">No. of users:&nbsp</div>
                                 <div class="label_stacked">Database:&nbsp</div>
+                                <div class="label_stacked">Additional info:&nbsp</div>
                             </div>
                             <div class="col" style="width: 70%">
                                 <div id="load_info_n_users" class="label_stacked"></div>
                                 <div id="load_info_database" class="label_stacked"></div>
+                                <div id="load_info_message" class="label_stacked"></div>
                             </div>
                         </div>
                     </div>
