miri changes to include new battery loop

--- a/templates/index.html
+++ b/templates/index.html
@@ -843,6 +843,7 @@
                                 </select>
                                 <select class="operational_parameter" name="strategy">
                                     <option>Maximise self consumption</option>
+                                    <option>Minimise costs</option>
                                 </select>
                             </div>
                         </div>
