--- a/templates/index.html
+++ b/templates/index.html
@@ -830,6 +830,9 @@
                                 <div class="label_stacked">Standard deviation:</div>
                                 <div class="label_stacked">Restriction:</div>
                                 <div class="label_stacked">Operational strategy:</div>
+                                <div class="label_stacked">Peak behaviour:</div>
+                                <div class="label_stacked">Off-Peak behaviour:</div>
+                                <div class="label_stacked">Shoulder behaviour:</div>
                             </div>
                             <div class="col battery_inputs" style="width: 20%">
                                 <input class="sample_parameter" name="penetration" type="number" min="0" max="100" value="0">
@@ -844,6 +847,21 @@
                                 <select class="operational_parameter" name="strategy">
                                     <option>Maximise self consumption</option>
                                     <option>Minimise costs</option>
+                                </select>
+                                <select class="operational_parameter" name="peak">
+                                    <option>Discharge to home</option>
+                                    <option>Charge from grid</option>
+                                    <option>Neither</option>
+                                </select>
+                                <select class="operational_parameter" name="off-peak">
+                                    <option>Discharge to home</option>
+                                    <option>Charge from grid</option>
+                                    <option>Neither</option>
+                                </select>
+                                <select class="operational_parameter" name="shoulder">
+                                    <option>Discharge to home</option>
+                                    <option>Charge from grid</option>
+                                    <option>Neither</option>
                                 </select>
                             </div>
                         </div>
